# os-win-labs

./: CMakeLists.txt  buildSubproject.ps1  createConfUncrustify.ps1  operation system labs.code-workspace  test_thread.cpp  uncrustify.cfg
docs/: lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx
lab1/: CMakeLists.txt  main.cpp
lab1/utils/: changeConsoleColor.cpp  printComputerName.cpp  printPowerStatus.cpp  printScreenMetrics.cpp  printSystemDirectoryAndSystemVersion.cpp  printSystemTimes.cpp  printUserName.cpp  printWindowsDirectory.cpp  utils.h
lab2/: CMakeLists.txt  main.cpp
lab2/utils/: PrintCountProcessAndThreads.cpp  PrintCpuTimes.cpp  StartNewNotepadProcess.cpp  utils.h
lab3/: CMakeLists.txt  main.cpp
lab3/utils/: PrintMemoryStatus.cpp  PrintMemoryVirtualMap.cpp  utils.h
lab4/: CMakeLists.txt  main.cpp
lab4/utils/: PrintProcessDetails.cpp  utils.h
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt
lab6/client/: CMakeLists.txt  client.cpp
lab6/server/: CMakeLists.txt  server.cpp
lab6/utils/: calculateDeterminant.cpp  utils.h
